--- a/index.html
+++ b/index.html
@@ -112,12 +112,17 @@
 
               <!-- Github link button -->
               <a href="https://github.com/joshua-griffis" target="_blank" title="Checkout my Projects on Github">
-                <button><i class="fa-brands fa-linkedin"></i></button>
+                <button><i class="fa-brands fa-github"></i></button>
               </a>
 
               <!-- Linkedin link button -->
               <a href="https://www.linkedin.com/in/joshua-griffis-b2817a242/" target="_blank" title="Connect to my Linkedin">
-                <button><i class="fa-brands fa-github"></i></button>
+                <button><i class="fa-brands fa-linkedin"></i></button>
+              </a>
+
+              <!-- Canva presentaion link-->
+              <a href="https://www.canva.com/design/DAFDCEHx8n4/wrvnkUZZsNeOC0q8m5im1g/view?utm_content=DAFDCEHx8n4&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" title="Check out my about me canva Presentation!!">
+                <button><i class="fa-solid fa-star-and-crescent"></i></button>
               </a>
 
           </div>
